; ModuleID = '/home/carl/AnghaBench/ish/platform/extr_linux.c_get_uptime.c'
source_filename = "/home/carl/AnghaBench/ish/platform/extr_linux.c_get_uptime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uptime_info = type { i32, i32, i32, i32 }
%struct.sysinfo = type { i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i64, i64 } @get_uptime() #0 {
  %1 = alloca %struct.uptime_info, align 4
  %2 = alloca %struct.sysinfo, align 8
  %3 = call i32 @sysinfo(%struct.sysinfo* %2)
  %4 = getelementptr inbounds %struct.uptime_info, %struct.uptime_info* %1, i32 0, i32 0
  %5 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 2
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %4, align 4
  %9 = getelementptr inbounds %struct.uptime_info, %struct.uptime_info* %1, i32 0, i32 1
  %10 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %9, align 4
  %14 = getelementptr inbounds %struct.uptime_info, %struct.uptime_info* %1, i32 0, i32 2
  %15 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %14, align 4
  %19 = getelementptr inbounds %struct.uptime_info, %struct.uptime_info* %1, i32 0, i32 3
  %20 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %2, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %19, align 4
  %22 = bitcast %struct.uptime_info* %1 to { i64, i64 }*
  %23 = load { i64, i64 }, { i64, i64 }* %22, align 4
  ret { i64, i64 } %23
}

declare dso_local i32 @sysinfo(%struct.sysinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
